@@ -51,6 +51,7 @@ public interface Constants
   public static final String HEAVY_BOMBER_DICE_ROLLS = "Heavy Bomber Dice Rolls";
   public static final String TWO_HIT_BATTLESHIPS_REPAIR_EACH_TURN = "Battleships repair at end of round";
   public static final String FOURTH_EDITION = "4th Edition";
+  public static final String PACIFIC_EDITION = "Pacific Edition";
   public static final String SUBMERSIBLE_SUBS = "Submersible Subs";
   public static final String TWO_HIT = "isTwoHit";
   public static final String USE_DESTROYERS_AND_ARTILLERY = "Use Destroyers and Artillery";
