@@ -1,3 +1,5 @@
+* Chinese infantry mechanism added for a&a pacific (Adam_J)
+
 * Convoy Zones implemented (Adam_J)
 
 * Add code for marines (Adam_J)
